# RagMultilanguageDemo

./: README.md
api/: bootstrapper.py  config.py  dependencies.py  main.py  pyproject.toml
api/infrastructure/: enum.py
api/request/: __init__.py  index_creation_result.py
api/routes/: __init__.py  index.py
api/services/: __init__.py  indexing_service.py
infra/: main.bicep  main.bicepparam
infra/modules/ai/: foundry.bicep
notebook/: .gitignore  EMBEDDING.md  README.md  agent.ipynb  car_problems_multilingual.xlsx  car_problems_translated_english.xlsx  create-index.ipynb  generate.data.ipynb  indexing.ipynb  indexing_hybrid.ipynb  indexing_multilanguage.ipynb  indexing_multilanguage_cohere.ipynb  indexing_multilanguage_openai.ipynb  indexing_translate_english.ipynb  pyproject.toml  search_multilanguage.ipynb
notebook/factory/: embedding_factory.py
notebook/models/: document.py  resolution.py
notebook/services/: base_embedding_service.py  embedding_service.py
notebook/tools/: __init__.py  user_function.py
notebook/tools/models/: car_fix.py
src/search-api/: README.md  config.py  main.py  pyproject.toml
src/search-api/models/: __init__.py
src/search-api/request/: __init__.py  trouble_information.py
src/search-api/services/: __init__.py  car_fix_service.py
